@@ -4,3 +4,4 @@
 - Add documentation regarding `nsswitch.conf` following issue #5
 - Migrate reference info to `ACKNOWLEDGMENTS.md`
 - Move demo GIF to `docs/res` along with other images
+- Document advanced sample with a readme
